MLABS-28-authenticate Implement authenticate email and signup
